@@ -1,3 +1,9 @@
+2010-06-30  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/DateVector: Index argument is int; throw declared
+	* src/DatetimeVector: Idem
+	* inst/include/Rcpp/DateVector.h: Idem
+	* inst/include/Rcpp/DatetimeVector.h: Idem
 
 2010-06-28  Romain Francois <romain@r-enthusiasts.com>
 
